# Trabalho-Individual-2022-2

./: .buildinfo  .gitignore  README.md  app-dockerfile  docker-compose.yml  dockerfile  execute_app.sh  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.circleci/: config.yml
.github/workflows/: ci.yml
_build/html/: search.html
_build/html/_sources/: index.rst.txt
_sources/: index.rst.txt
_static/: documentation_options.js
metabase/config/: metabase.env  postgres.env
src/: pyproject.toml
tests/data_pipeline/feature_engineering/: key_smash_test.py  word_embedding_test.py
tests/data_pipeline/pre_processing/: concatenate_columns_tests.py
tests/parser/: YAML_parser_test.py  feature_engineering_parser_test.py  model_parser_test.py  parser_base_test.py  test.py
trabalho_indi_gces_2022_punb/parser/: YAML_parser.py  feature_engineering_parser.py  model_parser.py
trabalho_individual_gces_2022_paulo/parser/: YAML_parser.py  feature_engineering_parser.py  model_parser.py
