[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Paulo Gonçalves Lima <paulogoncalves436@gmail.com>"]
readme = "README.md"
packages = [{include = "src", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
